<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo_p"
                android:layout_gravity=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java_quiz"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/Black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_of_40"
                android:layout_marginTop="30dp"
                android:textSize="25dp"
                android:textColor="@color/Black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:layout_marginTop="30dp"
                android:textSize="22dp"
                android:textColor="@color/Black"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/a1"
                android:textSize="18dp"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/a2"
                android:textSize="18dp"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/a3"
                android:textSize="18dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@color/green"
                android:layout_marginTop="30dp"
                android:text="@string/nq"
                android:textAllCaps="false"
                android:onClick="results"
                android:textSize="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_marginTop="15dp"
                android:text="@string/start_over"
                android:textAllCaps="false"
                android:textSize="20dp"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>

