<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/addDocTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reqDocu"
        android:textSize="33dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="12dp"
        android:background="@color/lightgreen" >

        <TextView
            android:id="@+id/docTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docType"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"/>

        <Spinner
            android:id="@+id/docTypeReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" />

        <TextView
            android:id="@+id/docNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docName"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/docNameReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDocName"
            android:layout_margin="3dp"
            android:layout_marginBottom="7dp"/>

        <TextView
            android:id="@+id/docAuthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docAuth"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/docAuthReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDocAuth"
            android:layout_margin="3dp"
            android:layout_marginBottom="7dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>