<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo_p"
                android:layout_gravity=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java_quiz"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/Black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:textSize="30dp"
                android:textColor="@color/Black"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r"
                android:layout_marginTop="10dp"
                android:textSize="22dp"
                android:textColor="@color/Black"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:textColor="@color/Black"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/be"
                android:layout_marginTop="30dp"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:gravity="center"/>

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="134dp"-->
<!--                android:layout_marginTop="15dp"-->
<!--                android:src="@drawable/bronze" />-->

            <Button
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:textColor="@color/white"
                android:background="@color/green"
                android:layout_marginTop="30dp"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textSize="20dp"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:textColor="@color/white"
                android:background="@color/darkGreen"
                android:layout_marginTop="10dp"
                android:text="@string/back_to_quizzes"
                android:textAllCaps="false"
                android:textSize="20dp"/>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>